--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -310,26 +310,31 @@ li {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+.search-items{
+  width: calc(100% - 120px);
+}
+.search-items li{
+  width: calc(33.33% - 15px);
+  margin-right: 15px;
+}
 .select-box{
   position: relative;
 }
 .select-box img{
   position: absolute;
-  left: 8%;
+  left: 15px;
   top: 50%;
   transform: translateY(-50%);
 }
 .select-box select {
-  font-family: Poppins;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 400;
-  padding: 13px 20px 13px 50px ;
+  padding-left: 50px;
+  height: 50px;
   color: #A3A5A6;
   border: 1px solid #A3A5A6;
   border-radius: 12px;
-}
-.select-box select option{
-  padding-left:-30px;
+  width: 100%;
 }
 .select-box select:focus{
   border: 1px solid #24B29B;
@@ -351,6 +356,8 @@ li {
   font-weight: 500;
   text-align: center;
   border: none;
+  min-width: 120px;
+  min-height: 40px;
 }
 /* search-wrap area end css */
 /* appointment area start css */
@@ -621,3 +628,86 @@ padding: 5px 22px;border-radius: 6px;
 }
 
 /* right-sidebar area end css */
+/* search page css start */
+.search-wrep{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.search-wrep .cardiolog{
+  height: 56px;
+  width: 182px;
+}
+.search-wrep .cardiolog h3{
+  font-size: 20px;
+  font-weight: 600;
+  color: #293033;
+
+}
+.search-wrep .cardiolog span{
+  font-size: 14px;
+  font-weight: 400;
+  color: #5C6366;
+}
+.search-wrep .filter {
+  height: 55px;
+  width: 154px;
+  background: #FFFFFF;
+  border-radius: 12px;
+  padding: 15px;
+  cursor: pointer;
+}
+.search-wrep .filter img{
+  width: 20px;
+  height: 20px;
+}
+.search-wrep .filter span{
+  font-family: Poppins;
+  font-size: 15px;
+  font-weight: 500;
+  color: #5C6366;
+}
+/* search-item area start css */
+.secrh-item-area{}
+.secrh-wrap{
+  background: #FFFFFF;
+  border-radius: 20px;
+  padding: 23px 25px;
+}
+.secrh-title{
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+  align-items: center;
+}
+.secrh-title a{}
+.secrh-title a img{
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  height: 130px;
+  width: 130px;
+  border-radius: 50%;
+  box-shadow: 0px 8px rgba(51, 102, 94, 0.1);
+
+}
+.secrh-title a h4{
+  font-size: 18px;
+  font-weight: 600;
+  color: #293033;
+  height: 28px;
+  width: 158px;
+}
+.secrh-title a  span{
+  text-align: right;
+  font-family: Poppins;
+  font-size: 15px;
+  font-weight: 400;
+
+}
+
+
+/* search-item area end css */
+/* search page css end */
