--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -668,46 +668,120 @@ padding: 5px 22px;border-radius: 6px;
   color: #5C6366;
 }
 /* search-item area start css */
-.secrh-item-area{}
+.secrh-item-area{
+  margin-top: 65px;
+}
 .secrh-wrap{
   background: #FFFFFF;
   border-radius: 20px;
   padding: 23px 25px;
 }
-.secrh-title{
-  position: relative;
+.secrh-title {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between;
-  align-items: center;
 }
-.secrh-title a{}
-.secrh-title a img{
-  position: absolute;
-  bottom: 100%;
-  left: 0;
+.secrh-title  .secrh-title-text{
+  border-bottom: 1px solid#EEEFF0;
+}
+.secrh-title  .secrh-title-text{
+ width: calc(100% - 145px);
+}
+.secrh-title img{
   height: 130px;
   width: 130px;
   border-radius: 50%;
-  box-shadow: 0px 8px rgba(51, 102, 94, 0.1);
-
+  box-shadow: 0px 1px 10px 5px rgb(51 102 94 / 10%);
+  margin-top: -55px;
+  margin-right: 15px;
 }
-.secrh-title a h4{
+.secrh-title-text h3{
   font-size: 18px;
   font-weight: 600;
   color: #293033;
-  height: 28px;
-  width: 158px;
 }
-.secrh-title a  span{
-  text-align: right;
+.secrh-title-text  h5{
+  font-size: 15px;
+  font-weight: 400;
+  color: #5C6366;
+}
+.secrh-title-text span{
+  color: #FFBF00;
+  padding-bottom: 5px;
+}
+.secrh-title-text .secrh-icon-color{
+  color: #5C6366;
+}
+.secrh-wrap h4{
+  margin-top: 22px;
+  font-size: 16px;
+  font-weight: 500;
+  color: #293033;
+}
+.secrh-wrap p{
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 25px;
+  color: #5C6366;
+  margin-top: 15px;
+}
+.secrh-wrap .location{
   font-family: Poppins;
   font-size: 15px;
   font-weight: 400;
+  color: #5C6366;
+}
+.secrh-wrap .location i{
+  padding-right: 5px;
+}
+.pegenetion-wrep{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+ margin-top: 40px;
+}
+.pegenetion-wrep .pegenetion-btn{
+  background: #ffffff;
+  border-radius: 12px;
+  padding: 5px 12px;
+  color: #00AAFF;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 500;
+  border: none;
+  width: 99px;
+  cursor: pointer;
+}
+.pegenetion-btn.next-btn i{
+  padding-left: 8px;
+}
+.pegenetion-wrep .pegenetion-btn i{
+  font-size: 18px;
+  padding-right: 8px;
+}
+.pegenetion-wrep .pegenetion-item{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background: #D4EDFA;
+  border-radius: 12px;
+  margin: 0 15px;
+}
+.pegenetion-wrep .pegenetion-item li{
+  padding: 8px 15px;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  color: #5C6366;
+  transition: .4s ease-in-out;
+}
+.pegenetion-wrep .pegenetion-item li:hover{
+  color: #ffffff;
+  background: #00AAFF;
+  border-radius: 8px;
 
 }
-
-
+.pegenetion-wrep .pegenetion-item li a{}
 /* search-item area end css */
 /* search page css end */
