--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -709,7 +709,7 @@ padding: 5px 22px;border-radius: 6px;
   padding-bottom: 5px;
 }
 .secrh-title-text .secrh-icon-color{
-  color: #5C6366;
+  color: #B2B2B2
 }
 .secrh-wrap h4{
   margin-top: 22px;
