--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -19,6 +19,9 @@
     .profile-wepr {
         margin-bottom: 20px;
     }
+    .header-title {
+        font-size: 24px;
+    }
 
 }
 
@@ -73,6 +76,9 @@
     }
     .appointment-table tbody tr td {
         padding: 10px 12px 10px 22px;
+    }
+    .header-title.doctor.booking-doctor {
+        display: none;
     }
 
 }
@@ -289,7 +295,49 @@
         font-size: 13px;
         padding-right:0;
     }
-
+    .apppointment-type-area {
+        padding: 30px 0px;
+        text-align: center;
+    }
+    .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+        margin-bottom: 20px;
+    }
+    li.nav-item {
+        padding-left: 10px;
+    }
+    .nav-item .nav-link {
+        padding:10px;
+        font-size: 14px;
+    }
+    .apppointment-type-area h2 {
+        font-size: 15px;
+        margin-bottom: 20px;
+    }
+    .apppointment-time h3 {
+        font-size: 15px;
+        margin-top: 25px;
+        margin-bottom: 10px;
+    }
+    .time-title h4 {
+        font-size: 15px;
+        margin-bottom: 10px;
+    }
+    .time-itam li {
+        margin-right: 10px;
+        margin-bottom: 10px;
+    }
+    .time-itam {
+        padding-left: 15px;
+    }
+    .time-itam li .months p {
+        font-size: 15px;
+    }
+    .pay {
+        text-align: center;
+    }
+    .pay a .pay-btn {
+        text-align: center;
+    }
 
 }
 
