--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -20,7 +20,13 @@
         margin-bottom: 20px;
     }
     .header-title {
-        font-size: 24px;
+        font-size: 18px;
+    }
+    .booking-profile.booking-summary {
+        margin-bottom: 50px;
+    }
+    .payment-area h2 {
+        font-size: 15px;
     }
 
 }
@@ -80,6 +86,11 @@
     .header-title.doctor.booking-doctor {
         display: none;
     }
+    .booking-profile.booking-summary {
+        margin-bottom: 50px;
+    }
+
+
 
 }
 
@@ -345,6 +356,27 @@
     .choose-time-item {
         margin-left: 10px;
     }
+    .booking-profile.booking-summary h3 {
+        font-size: 15px;
+    }
+    .booking-profile .profile-text h2 {
+        font-size: 15px;
+    }
+    .booking-item .booking-item-list tr th {
+        font-size: 14px;
+    }
+    .payment-area h2 {
+        font-size: 15px;
+    }
+    .payment-area .card-item li {
+        width: 110px;
+        margin-bottom: 10px;
+    }
+    .patient-placeholder {
+        font-size: 15px;
+    }
+    
+
 
 }
 
